<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/scheduleRow"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical">
<LinearLayout
    android:id="@+id/border"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="1px"
    >
    <RelativeLayout
        android:id="@+id/widget32"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/gameDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameDate"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:paddingRight="2sp">
        </TextView>
        <TextView
            android:id="@+id/gameLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameLocation"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="2sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/widget36"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/homeTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeTeam"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">
        </TextView>
        <TextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:gravity="center"
            android:layout_centerHorizontal="true">
        </TextView>
        <TextView
            android:id="@+id/awayTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/awayTeam"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">
        </TextView>
    </RelativeLayout>
</LinearLayout>
</LinearLayout>