<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scheduleRow"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/border"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1px"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/widget32"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scheduleGameDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingRight="2sp"
                android:text="@string/gameDate"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/scheduleGameLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingLeft="2sp"
                android:text="@string/gameLocation"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/widget36"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scheduleHomeTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/homeTeam"
                android:textColor="@color/textPrimary" />

            <TextView
                android:id="@+id/vsScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/vs"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/scheduleAwayTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/awayTeam"
                android:textColor="@color/textPrimary" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
