<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/dateTimeBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/gameDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/gameDate"
            android:text="@string/at_symbol" />

        <TextView
            android:id="@+id/gameLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/at"
            android:text="@string/location" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/scoreBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateTimeBar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="HOME"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gameHomeName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_name" />

            <TextView
                android:id="@+id/gameHomeTeamScore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/away"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gameAwayName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_name" />

            <TextView
                android:id="@+id/gameAwayTeamScore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/gamePager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scoreBar">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/gameTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true" />
    </androidx.viewpager.widget.ViewPager>
</RelativeLayout>
